# VectorTileGateway

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
resources/html/: index.html
src/: __main__.py  api.py  transform.py
