[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "VectorTileGateway"
description = "Server side Rendering for Vector Tiles"
authors = [{ name = "Sebastian Knopf", email = "mail@sebastian-knopf.de" }]
readme = "README.md"
license = {text = "Apache License (2.0)"}
dependencies = [
    "fastapi",
    "uvicorn",
    "requests"
]
requires-python = ">=3.12"

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/version.py"